--- a/PruebasArcGIS_1005/build.gradle
+++ b/PruebasArcGIS_1005/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://esri.bintray.com/arcgis' }
         
     }
 }
